# EffekseerForUnity

./: .gitignore  .gitmodules  CreatePackage.py  Help.html  LICENSE  README.md  azure-pipelines.yml  create_effekseer_tool.py  create_unitypackage.py  readme.txt  readme_HDRP.txt  readme_LWRP.txt  readme_URP.txt  readme_macOS.txt
Dev/: CMakeLists.txt
Dev/Cpp/: CMakeLists.txt
Dev/Cpp/Device/: EffekseerPluginDX11.cpp  EffekseerPluginDX11.h  EffekseerPluginDX9.cpp  EffekseerPluginDX9.h
Dev/Cpp/android/: Build.bat
Dev/Cpp/android/jni/: Android.mk  Application_arm64-v8a.mk  Application_armeabi-v7a.mk  Application_x86.mk  Application_x86_64.mk
Dev/Cpp/common/: EffekseerPlugin.cpp  EffekseerPluginCommon.cpp  EffekseerPluginCommon.h  EffekseerPluginCurve.cpp  EffekseerPluginCurve.h  EffekseerPluginMaterial.cpp  EffekseerPluginMaterial.h  EffekseerPluginModel.cpp  EffekseerPluginModel.h  EffekseerPluginNetwork.cpp  EffekseerPluginNetwork.h  EffekseerPluginSound.cpp  EffekseerPluginSound.h  EffekseerPluginTexture.h  MemoryFile.cpp  MemoryFile.h
Dev/Cpp/graphicsAPI/: EffekseerPluginGraphics.cpp  EffekseerPluginGraphics.h  EffekseerPluginGraphicsDX11.cpp  EffekseerPluginGraphicsDX11.h  EffekseerPluginGraphicsDX12.cpp  EffekseerPluginGraphicsDX12.h  EffekseerPluginGraphicsDX9.cpp  EffekseerPluginGraphicsDX9.h  EffekseerPluginGraphicsGL.cpp  EffekseerPluginGraphicsGL.h  EffekseerPluginGraphicsLLGI.cpp  EffekseerPluginGraphicsLLGI.h  EffekseerPluginGraphicsUnity.cpp  EffekseerPluginGraphicsUnity.h
Dev/Cpp/linux/: build_cmake.sh
Dev/Cpp/macosx/: Build.sh  EffekseerPluginOSX.cpp  build_cmake.sh
Dev/Cpp/macosx/EffekseerUnity.xcodeproj/: project.pbxproj
Dev/Cpp/opengl/: EffekseerPluginGL.cpp  EffekseerPluginGL.h  EffekseerPluginLoaderGL.cpp  EffekseerPluginLoaderGL.h
Dev/Cpp/renderer/: EffekseerRendererImplemented.cpp  EffekseerRendererImplemented.h  EffekseerRendererIndexBuffer.cpp  EffekseerRendererIndexBuffer.h  EffekseerRendererMaterialLoader.cpp  EffekseerRendererMaterialLoader.h  EffekseerRendererModelLoader.cpp  EffekseerRendererModelLoader.h  EffekseerRendererRenderState.cpp  EffekseerRendererRenderState.h  EffekseerRendererShader.cpp  EffekseerRendererShader.h  EffekseerRendererTextureLoader.cpp  EffekseerRendererTextureLoader.h  EffekseerRendererVertexBuffer.cpp  EffekseerRendererVertexBuffer.h
Dev/Cpp/unity/: IUnityGraphics.h
Dev/Cpp/webgl/: Build.bat  Build_1.37.3.bat  Build_1.38.11.bat  Build_2.0.19.bat  CMakeLists.txt  libEffekseerUnity.bc
Dev/Cpp/windows/: Build.bat  Clean.bat  EffekseerPluginLoaderWin.cpp  EffekseerPluginWin.cpp  EffekseerUnity.def  EffekseerUnity.sln  EffekseerUnity.vcxproj  EffekseerUnity.vcxproj.filters  GenerateProjects.bat  GenerateProjects_DX12.bat  GenerateProjects_Sanitizer.bat  LasyModelDX11.h  RenderThreadEventQueue.cpp  RenderThreadEventQueue.h
Dev/Plugin/: BuildPackage.bat  BuildPackage.sh
Dev/Plugin/Assets/Effekseer/: Effekseer.asmdef  package.json
Dev/Plugin/Assets/Effekseer/Editor/: EffekseerAssetInspector.cs  EffekseerAssetPostProcessor.cs  EffekseerEditor.asmdef  EffekseerEditor.cs  EffekseerEmitterEditor.cs  EffekseerMaterialInformation.cs  EffekseerPluginSwitcher.cs  EffekseerSystemEditor.cs  EffekseerTool.cs  EfkFileImporter.cs
Dev/Plugin/Assets/Effekseer/Example/: EfkBasic.cs  EfkBasic.unity  EfkTimeline.playable
Dev/Plugin/Assets/Effekseer/Example/Effects/: Laser01.asset  Laser01.efk  Laser02.asset  Laser02.efk  Laser03.asset  Laser03.efk  Particle01.asset  Particle01.efk  Simple_Distortion.asset  Simple_GeneratingPosition1.asset  Simple_GeneratingPosition1.efk  Simple_Ribbon_Parent.asset  Simple_Ribbon_Parent.efk  Simple_Ribbon_Sword.asset  Simple_Ribbon_Sword.efk  Simple_Ring_Shape1.asset  Simple_Ring_Shape2.asset  Simple_Ring_Shape2.efk  Simple_Sprite_BillBoard.asset  Simple_Sprite_Fixed.asset  Simple_Sprite_FixedYAxis.asset  Simple_Sprite_FixedYAxis.efk  Simple_Track1.asset  Simple_Track1.efk
Dev/Plugin/Assets/Effekseer/Materials/: EffekseerFixedShader.shader  EffekseerShaderAdCommonPS.cginc  EffekseerShaderAdDistortionPS.cginc  EffekseerShaderAdLitUnlitPS.cginc  EffekseerShaderAdVS.cginc  EffekseerShaderCommon.cginc  EffekseerShaderDistortionPS.cginc  EffekseerShaderLitUnlitPS.cginc  EffekseerShaderSoftParticlePS.cginc  EffekseerShaderVS.cginc  EffekseerShader_Linear_sRGB.cginc  FakeShader.shader  GrabDepthShader.shader  StandardDistortionShader.shader  StandardLightingShader.shader  StandardModelDistortionShader.shader  StandardModelShader.shader  StandardShader.shader  Texture2DArrayBlitShader.shader  Texture2DBlitShader.shader
Dev/Plugin/Assets/Effekseer/Plugins/: Effekseer.cs  EffekseerEmitter.cs  EffekseerPlayableAsset.cs  EffekseerPlayableBehaviour.cs  EffekseerSystem.cs
Dev/Plugin/Assets/Effekseer/Resources/: EffekseerDependentAssets.asset  EffekseerSettings.asset
Dev/Plugin/Assets/Effekseer/Scripts/: Effekseer.asmdef  Effekseer.cs  EffekseerBlitter.cs  EffekseerCurveAsset.cs  EffekseerDependentAssets.cs  EffekseerEffectAsset.cs  EffekseerEmitter.cs  EffekseerHandle.cs  EffekseerMaterialAsset.cs  EffekseerModelAsset.cs  EffekseerPlayableAsset.cs  EffekseerPlayableBehaviour.cs  EffekseerRenderPath.cs  EffekseerRenderer.cs  EffekseerRendererNative.cs  EffekseerRendererUnity.cs  EffekseerRuntime.cs  EffekseerSettings.cs  EffekseerShaderGenerator.cs  EffekseerSound.cs  EffekseerSystem.cs  StereoRendererUtil.cs
Dev/Plugin/Assets/Effekseer/ScriptsExternal/: EffekseerRendererHDRP.cs  EffekseerRendererLWRP.cs  EffekseerURPRenderPassFeature.cs  PostProcessingStackEffekseer.cs  PostProcessingStackEffekseerAfterStackSettings.cs  PostProcessingStackEffekseerBeforeStackSettings.cs
Dev/Plugin/Assets/Effekseer/Test/: EfkCameraCulling.unity  EfkCameraCullingScript.cs  EfkChaingingScene1Script.cs  EfkChangingScene1.unity  EfkChangingScene2.unity  EfkReflectionProbe.unity  EfkRefrectionProbe.unity  EfkVariousEffects.unity
Dev/Plugin/Assets/Plugins/WebGL/: libEffekseerUnity.bc
Dev/Plugin/ProjectSettings/: ProjectSettings.asset  UnityConnectSettings.asset
Help/: Doxyfile  build.bat  index_ja.html
(+234 files in other folders)
